--- a/wxcode/pages/auth/auth.wxss
+++ b/wxcode/pages/auth/auth.wxss
@@ -1,4 +1,4 @@
-/* pages/login/login.wxss */
+/* pages/auth/auth.wxss */
 .header {
     margin: 90rpx 0 90rpx 50rpx;
     border-bottom: 1px solid #ccc;
