--- a/wxcode/pages/index/index.wxml
+++ b/wxcode/pages/index/index.wxml
@@ -1,16 +1,28 @@
 <!--用name 定义模版-->
 <template name="docList">
-  <view class="chunk">
-    <view class="digest">
-      <text>{{title}}</text>
+  <view class="weui-article__section">
+    <view class="weui-article__h1">{{title}}</view>
+    <view class="weui-article__p">
+      {{content}}
     </view>
-    <view>
-      <text>{{time}}</text>
+    <view class="weui-article__p" wx:if="{{src}}">
+      <image class="weui-article__img" src="{{src}}" mode="aspectFit" style="height: 180px" />
     </view>
   </view>
 </template>
- 
-<view wx:for="{{msgList}}" wx:key="{{id}}">
-    <!--用is 使用模版-->
-    <template is="docList" data="{{...item}}"/>
+
+
+
+<view class="page">
+  <view class="page__hd">
+    <view class="page__title">{{theme}}</view>
+    <view class="page__desc">{{themeDesc}}</view>
+  </view>
+  <view class="page__bd">
+    <view class="weui-article">
+        <view wx:for="{{msgList}}" wx:key="{{title}}">
+          <template is="docList" data="{{...item}}" />
+        </view>
+    </view>
+  </view>
 </view>
