--- a/wxcode/pages/search/search.wxss
+++ b/wxcode/pages/search/search.wxss
@@ -1,29 +1,49 @@
 /* pages/search/search.wxss */
+@import '../../style/list.wxss';
 
-#adduser{
-    background: #f5f5f5;
+.weui-flex {
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  align-items: center;
 }
-.section__title{
-    float: left;
-    width:30%;
+
+.kind-list__item {
+  margin: 10px 0;
+  background-color: #fff;
+  border-radius: 2px;
+  overflow: hidden;
 }
-.form-group{
-    float: right;
-    width: 70%;
+
+.kind-list__item:first-child {
+  margin-top: 0;
 }
-.section{
-    clear: both;
-    width:90%;
-    margin: 2rem auto;
+
+.kind-list__img {
+  width: 30px;
+  height: 30px;
 }
-.input-text{
-    border: 1px solid #ddd;
+
+.kind-list__item-hd {
+  padding: 20px;
+  -webkit-transition: opacity 0.3s;
+  transition: opacity 0.3s;
 }
-.button{
-    border: 1px solid #1aad19;
-    border-radius: 2px;
+
+.kind-list__item-hd_show {
+  opacity: 0.4;
 }
-.picker{
-    padding: 13px;
-    background-color: #FFFFFF;
+
+.kind-list__item-bd {
+  height: 0;
+  overflow: hidden;
 }
+
+.kind-list__item-bd_show {
+  height: auto;
+}
+
+slider {
+  padding-top: 1px;
+  padding-bottom: 1px;
+}
+
