自己的练习玩玩

--- a/wxcode/pages/error/error.wxml
+++ b/wxcode/pages/error/error.wxml
@@ -8,15 +8,14 @@
         </view>
         <view class="weui-msg__opr-area">
             <view class="weui-btn-area">
-                <button class="weui-btn" bindtap='bindClose' type="default">关闭</button>
+                <button class="weui-btn" bindtap='bindClose' type="default">返回首页</button>
             </view>
         </view>
         <view class="weui-msg__extra-area">
             <view class="weui-footer">
                 <view class="weui-footer__links">
-                    <navigator url="/pages/index/index" class="weui-footer__link">首页</navigator>
                 </view>
-                <view class="weui-footer__text">Copyright © 2008-2016</view>
+                <view class="weui-footer__text">Copyright © 2018-2019</view>
             </view>
         </view>
     </view>
