--- a/wxcode/pages/detail/detail.wxml
+++ b/wxcode/pages/detail/detail.wxml
@@ -1,24 +1,46 @@
+<import src="./template/fin.wxml" />
+<template name="btnTpl">
+  <block wx:for="{{data}}" wx:key="{{id}}">
+    <button wx:if="{{item.tabIdx==activeIndex}}" class="mini-btn" type="{{item.id==scrollId? 'primary': 'default'}}" size="mini" data-id="{{item.id}}" bindtap="tapEvent">{{item.name}}</button>
+  </block>
+</template>
+
 <view class="page">
-    <view class="page__bd">
-        <view class="weui-tab">
-            <view class="weui-navbar">
-                <block wx:for="{{tabs}}" wx:key="*this">
-                    <view id="{{index}}" class="weui-navbar__item {{activeIndex == index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
-                        <view class="weui-navbar__title">{{item}}</view>
-                    </view>
-                </block>
-                <view class="weui-navbar__slider" style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view>
-            </view>
-            <view class="weui-tab__panel">
-                <view class="weui-tab__content" hidden="{{activeIndex != 0}}">选项一的内容</view>
-                <view class="weui-tab__content" hidden="{{activeIndex != 1}}">选项二的内容</view>
-                <view class="weui-tab__content" hidden="{{activeIndex != 2}}">选项三的内容</view>
-            </view>
-        </view>
+ <view class="weui-loadmore" wx:if="{{load}}">
+      <view class="weui-loading"></view>
+      <view class="weui-loadmore__tips">正在加载</view>
     </view>
-</view>
+  <view class="page__bd">
+    <view class="weui-tab">
 
+      <view class="weui-navbar bar">
+        <block wx:for="{{tabs}}" wx:key="*this">
+          <view id="{{index}}" class="weui-navbar__item {{activeIndex==index ? 'weui-bar__item_on' : ''}}" bindtap="tabClick">
+            <view class="weui-navbar__title">{{item}}</view>
+          </view>
+        </block>
+        <view class="weui-navbar__slider" style="left: {{sliderLeft}}px; transform: translateX({{sliderOffset}}px); -webkit-transform: translateX({{sliderOffset}}px);"></view>
+      </view>
 
-<view class="container">
-  <ec-canvas id="mychart-dom-bar" canvas-id="mychart-bar" ec="{{ ec }}"></ec-canvas>
+      <view class="weui-tab__panel">
+        <view class="weui-tab__content" wx:if="{{detail.activeIndex==0 }}">
+          <template is="btnTpl" data="{{...detail}}" />
+        </view>
+
+        <view class="weui-tab__content" wx:if="{{detail.activeIndex==1 }}">
+          <template is="btnTpl" data="{{...detail}}" />
+        </view>
+        <view class="weui-tab__content" wx:if="{{detail.activeIndex==2 }}">
+          <template is="btnTpl" data="{{...detail}}" />
+        </view>
+        <view class="weui-tab__content" wx:if="{{detail.activeIndex==3 }}">敬请期待</view>
+        <view class="weui-tab__content" wx:if="{{detail.activeIndex==4 }}">敬请期待</view>
+
+        <view class="container" wx:if="{{detail.scrollId!=-1}}">
+          <ec-canvas id="ec_id" canvas-id="{{canvasId}}" ec="{{ec_data}}"></ec-canvas>
+        </view>
+      </view>
+
+    </view>
+  </view>
 </view>
