--- a/wxcode/pages/detail/detail.wxss
+++ b/wxcode/pages/detail/detail.wxss
@@ -1,9 +1,53 @@
-.canvas {
-  width:100%;
-  height:400px
+page,
+.page,
+.page__bd{
+    height: 100%;
+    background-color: #fff;
+    padding-bottom: 0;
+    padding-left: 5rpx;
+    padding-right: 5rpx;
+
 }
+
+.pannel {
+  background-color: #fff;
+}
+
+.weui-tab__content{
+    padding-top: 20px;
+    text-align: center; 
+    background-color: #fff;
+}
+
+.bar {
+  background-color: #F8F8F8;
+}
+
 
 ec-canvas {
   width: 100%;
-  height: 400px;
+  height: 250px;
+  background-color: #fff
 }
+
+
+.mini-btn{
+    margin: 10rpx,10rpx;
+    padding: 1rpx,10rpx;
+    width:24%;
+    background-color: #F8F8F8;
+}
+.mini-btn-sel{
+    background-color: rgb(52, 168, 52);
+    color: white
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10rpx,0,0 0;
+  box-sizing: border-box;
+  background-color: #fff
+} 
