--- a/wxcode/pages/mine/mine.wxss
+++ b/wxcode/pages/mine/mine.wxss
@@ -1,5 +1,6 @@
 /**index.wxss**/
-.userinfo {
+
+/* .userinfo {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,4 +19,40 @@
 
 .usermotto {
   margin-top: 200px;
+} */
+
+.page-user .userinfo {
+  padding: 20rpx 0;
+}
+
+.page-user .userinfo-avatar {
+  float: left;
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50%;
+}
+
+.page-user .userinfo-info {
+  float: left;
+  line-height: 1;
+  padding: 8rpx 0;
+  margin-left: 24rpx;
+}
+
+.page-user .userinfo-nickname {
+  color: #5cbaa7;
+  font-size: 36.26666667rpx;
+  margin-bottom: 16rpx;
+}
+
+.page-user .userinfo-status {
+  color: #999;
+  font-size: 31.73333333rpx;
+}
+
+.page-user .cell-icon {
+  width: 40rpx;
+  height: 40rpx;
+  margin-right: 8rpx;
+  display: block;
 }
