--- a/wxcode/style/list.wxss
+++ b/wxcode/style/list.wxss
@@ -1,3 +1,8 @@
+.search {
+  background: rgb(52, 168, 52);
+  color:#fff
+}
+
 /* table **/
 .top{
   position: relative;
@@ -8,6 +13,11 @@
   padding-left: 150rpx;
   overflow-x: hidden;
 }
+
+.trans {
+   width:1050rpx;
+}
+
 .tableLeft {
   border: 0px solid darkgray;
   width:150rpx;
@@ -86,4 +96,12 @@
 .code {
   font-size: 11px;
   color:rgb(185, 177, 177);
+}
+
+.small{
+  font-size: 12px;
+}
+
+.showData{
+  background-color: #F8F8F8;
 }
